port IE fix for header flexbox alignment to TSUS

--- a/resources/gato-template-tsus2017/css/tsus-header.scss
+++ b/resources/gato-template-tsus2017/css/tsus-header.scss
@@ -9,7 +9,7 @@ header{
   .flex-header{
     display: flex;
     justify-content: flex-end;
-    align-items: unsafe center;
+    align-items: center;
     flex-wrap: nowrap;
     .tsus-homelink {
       margin-right: auto;
